--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -39,21 +39,18 @@
      "output_type": "stream",
      "text": [
       "[0. 0. 0. 0. 0.] \n",
-      " [[0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]] \n",
-      " [0.20862319 0.10547534 0.65838439 0.44159704 0.12134991] \n",
-      " [5.         4.93877551 4.87755102 4.81632653 4.75510204 4.69387755\n",
-      " 4.63265306 4.57142857 4.51020408 4.44897959 4.3877551  4.32653061\n",
-      " 4.26530612 4.20408163 4.14285714 4.08163265 4.02040816 3.95918367\n",
-      " 3.89795918 3.83673469 3.7755102  3.71428571 3.65306122 3.59183673\n",
-      " 3.53061224 3.46938776 3.40816327 3.34693878 3.28571429 3.2244898\n",
-      " 3.16326531 3.10204082 3.04081633 2.97959184 2.91836735 2.85714286\n",
-      " 2.79591837 2.73469388 2.67346939 2.6122449  2.55102041 2.48979592\n",
-      " 2.42857143 2.36734694 2.30612245 2.24489796 2.18367347 2.12244898\n",
-      " 2.06122449 2.        ]\n"
+      " [[4.67896683e-310 0.00000000e+000 6.90906383e-310 6.90906401e-310\n",
+      "  6.90906404e-310]\n",
+      " [6.90906402e-310 6.90906402e-310 6.90906383e-310 6.90906383e-310\n",
+      "  6.90906400e-310]\n",
+      " [6.90906383e-310 6.90906383e-310 6.90906400e-310 6.90906398e-310\n",
+      "  6.90906399e-310]\n",
+      " [6.90906402e-310 6.90906401e-310 6.90906402e-310 6.90906404e-310\n",
+      "  6.90906403e-310]\n",
+      " [6.90906400e-310 6.90906400e-310 6.90906386e-310 6.90906393e-310\n",
+      "  1.02765654e-321]] \n",
+      " [0.29239842 0.43718975 0.16436337 0.36844196 0.89436125] \n",
+      " [0.  0.5 1.  1.5 2. ]\n"
      ]
     }
    ],
@@ -61,13 +58,13 @@
     "zeroes = np.zeros(5)\n",
     "empty = np.empty([5,5])\n",
     "random = np.random.random(5)\n",
-    "linspace = np.linspace(5, stop=2)\n",
+    "linspace = np.linspace(num=5, start=0, stop=2)\n",
     "print(zeroes, \"\\n\", empty, \"\\n\",random, \"\\n\",linspace)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,23 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.20862319 0.10547534 0.65838439 0.44159704 0.12134991 5.\n",
-      " 4.93877551 4.87755102 4.81632653 4.75510204 4.69387755 4.63265306\n",
-      " 4.57142857 4.51020408 4.44897959 4.3877551  4.32653061 4.26530612\n",
-      " 4.20408163 4.14285714 4.08163265 4.02040816 3.95918367 3.89795918\n",
-      " 3.83673469 3.7755102  3.71428571 3.65306122 3.59183673 3.53061224\n",
-      " 3.46938776 3.40816327 3.34693878 3.28571429 3.2244898  3.16326531\n",
-      " 3.10204082 3.04081633 2.97959184 2.91836735 2.85714286 2.79591837\n",
-      " 2.73469388 2.67346939 2.6122449  2.55102041 2.48979592 2.42857143\n",
-      " 2.36734694 2.30612245 2.24489796 2.18367347 2.12244898 2.06122449\n",
-      " 2.        ]\n"
+      "[0.29239842 0.43718975 0.16436337 0.36844196 0.89436125 0.\n",
+      " 0.5        1.         1.5        2.        ]\n"
      ]
     }
    ],
@@ -113,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
