--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -121,6 +121,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 1 4 4]\n",
+      "[[7 1]\n",
+      " [4 4]]\n",
+      "[[7 4]\n",
+      " [1 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rands = np.random.randint(10, size=4)\n",
+    "print(rands)\n",
+    "reshape = rands.reshape([2,2])\n",
+    "print(reshape)\n",
+    "transpose = reshape.transpose()\n",
+    "print(transpose)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
