add epic memes lmao

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://i.imgflip.com/61zzpm.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
