--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![](https://i.imgflip.com/62hcof.jpg)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
