--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import itertools\n",
     "import matplotlib.pyplot as plt\n",
-    "df = pd.read_csv(\"Iris_1.csv\")"
+    "d1lf = pd.read_csv(\"Iris_1.csv\")"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop('Id', axis=1)"
+    "d1lf = d1lf.drop('Id', axis=1)"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.dropna().drop_duplicates()"
+    "d1lf = d1lf.dropna().drop_duplicates()"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df['SepalLengthCm'] > 0]"
+    "d1lf = d1lf[d1lf['SepalLengthCm'] > 0]"
    ]
   },
   {
@@ -44,6 +44,17 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iris-versicolor    50\n",
+      "Iris-virginica     49\n",
+      "Iris-setosa        48\n",
+      "Iris-Imsa           1\n",
+      "Name: Species, dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -189,8 +200,8 @@
     }
    ],
    "source": [
-    "df['Species'].value_counts()\n",
-    "df = df[df['Species'] != \"Iris-Imsa\"]\n",
+    "print(d1lf['Species'].value_counts())\n",
+    "df = d1lf[d1lf['Species'] != \"Iris-Imsa\"]\n",
     "df"
    ]
   },
