--- a/xrays/train.ipynb
+++ b/xrays/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "tempset = RSNASet(csv_path=csv_path, root_dir=items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in /home/dsingh/.cache/torch/hub/pytorch_vision_v0.10.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is available - using CUDA!\n"
+     ]
+    }
+   ],
+   "source": [
     "BATCH_SIZE = 128\n",
-    "trainset = RSNASet(csv_path=csv_path, root_dir=items)\n",
+    "\n",
+    "import math\n",
+    "trainlen = math.floor(0.80 * len(tempset)) # 80/20 train/val split\n",
+    "vallen = len(tempset) - trainlen\n",
+    "# trainlen = 512\n",
+    "# vallen = 256\n",
+    "\n",
+    "trainset, valset = torch.utils.data.random_split(tempset, [trainlen, vallen], generator=torch.Generator().manual_seed(42))\n",
     "model = 'resnet18'\n",
     "trainloader = torch.utils.data.DataLoader(trainset,batch_size=BATCH_SIZE,shuffle=True,num_workers=4)\n",
+    "valloader = torch.utils.data.DataLoader(valset,batch_size=BATCH_SIZE,shuffle=True,num_workers=4)\n",
     "classes = ('epidural', 'intraparenchymal', 'intraventricular', 'subarachnoid', 'subdural','none')\n",
     "model = torch.hub.load('pytorch/vision:v0.10.0', model, pretrained=False, num_classes=len(classes))\n",
     "if torch.cuda.is_available():\n",
@@ -77,24 +109,45 @@
     "import torch.optim as optim\n",
     "import torch.nn as nn\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(model.parameters(), lr=0.005)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Validating: Epoch 1:   1%|          | 47/4706 [00:37<1:01:40,  1.26batch/s, accuracy=85, loss=0.64]   \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_18412/789706014.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0mcorrect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m             \u001b[0mtotal_correct\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mcorrect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[0mtotal\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from tqdm import tqdm\n",
     "for epoch in range(5):  # loop over the dataset multiple times\n",
-    "    running_loss = 0.0\n",
-    "    batch = 0\n",
     "    with tqdm(trainloader, unit=\"batch\") as tepoch:\n",
+    "        model.train()\n",
+    "        running_loss = 0.0\n",
+    "        batch = 0\n",
+    "        total_correct = 0\n",
+    "        total = 0\n",
     "        for inputs, labels in tepoch:\n",
     "            tepoch.set_description(f\"Epoch {epoch + 1}\")\n",
-    "            # get the inputs; data is a list of [inputs, labels]\n",
     "            if torch.cuda.is_available():\n",
     "                inputs = inputs.cuda()\n",
     "                labels = labels.cuda()\n",
@@ -108,15 +161,44 @@
     "            optimizer.step()\n",
     "            predictions = outputs.argmax(dim=1, keepdim=True).squeeze()\n",
     "            correct = (predictions == labels).sum().item()\n",
-    "            accuracy = correct / BATCH_SIZE # batch_size\n",
+    "            total_correct += correct\n",
+    "            total += BATCH_SIZE\n",
+    "            accuracy = total_correct / total # batch_size\n",
     "            running_loss += loss.item()\n",
-    "            if batch % 50 == 49:\n",
-    "                tepoch.set_postfix(loss=running_loss/50, accuracy=100. * accuracy)\n",
-    "                running_loss = 0.0\n",
+    "            if batch > 0:\n",
+    "                tepoch.set_postfix(loss=running_loss/batch, accuracy=100. * accuracy)\n",
+    "            batch += 1\n",
+    "    with tqdm(valloader, unit=\"batch\") as tepoch:\n",
+    "        model.eval()\n",
+    "        running_loss = 0.0\n",
+    "        batch = 0\n",
+    "        total_correct = 0\n",
+    "        total = 0\n",
+    "        for inputs, labels in tepoch:\n",
+    "            tepoch.set_description(f\"Validating: Epoch {epoch + 1}\")\n",
+    "            if torch.cuda.is_available():\n",
+    "                inputs = inputs.cuda()\n",
+    "                labels = labels.cuda()\n",
+    "            # zero the parameter gradients\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            # forward + backward + optimize\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            predictions = outputs.argmax(dim=1, keepdim=True).squeeze()\n",
+    "            correct = (predictions == labels).sum().item()\n",
+    "            total_correct += correct\n",
+    "            total += BATCH_SIZE\n",
+    "            accuracy = total_correct / total # batch_size\n",
+    "            running_loss += loss.item()\n",
+    "            if batch > 0:\n",
+    "                tepoch.set_postfix(loss=running_loss/batch, accuracy=100. * accuracy)\n",
     "            batch += 1\n",
     "\n",
     "    print('Saving model at epoch {}'.format(epoch))\n",
-    "    torch.save(model.state_dict(), \"weights/{}/epoch{}.pth\".format(model,epoch))\n",
+    "    torch.save(model.state_dict(), \"weights/split_resnet18/epoch{}.pth\".format(epoch))\n",
     "    print('Saved model at epoch {}!'.format(epoch))\n",
     "print('Finished training!')"
    ]
