--- a/xrays/train.ipynb
+++ b/xrays/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,10 @@
     "            for rows in rdr:\n",
     "                fn = '_'.join(rows[0].split('_')[0:2])\n",
     "                try:\n",
+    "                    if len(labels[fn]) == 6:\n",
+    "                        continue\n",
     "                    labels[fn].append(int(rows[1]))\n",
-    "                except:\n",
+    "                except KeyError:\n",
     "                    labels[fn] = [int(rows[1])]\n",
     "        for fn in labels.keys():\n",
     "            # \"any\" should really be the classification \"none\"\n",
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,28 +72,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "vals = list(tempset.labels.values())\n",
+    "t = np.argmax(vals, axis=1)\n",
+    "counts = torch.FloatTensor(np.bincount(t))\n",
+    "assert counts.sum() == len(tempset)\n",
+    "counts = counts / counts.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cache found in /home/dsingh/.cache/torch/hub/pytorch_vision_v0.10.0\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA is available - using CUDA!\n"
+      "tensor([0.0042, 0.0471, 0.0207, 0.0286, 0.0428, 0.8566])\n"
      ]
     }
    ],
    "source": [
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "BATCH_SIZE = 128\n",
     "\n",
     "import math\n",
+    "from focal import FocalLoss\n",
     "trainlen = math.floor(0.80 * len(tempset)) # 80/20 train/val split\n",
     "vallen = len(tempset) - trainlen\n",
     "# trainlen = 512\n",
@@ -99,47 +119,39 @@
     "\n",
     "trainset, valset = torch.utils.data.random_split(tempset, [trainlen, vallen], generator=torch.Generator().manual_seed(42))\n",
     "model = 'resnet18'\n",
-    "trainloader = torch.utils.data.DataLoader(trainset,batch_size=BATCH_SIZE,shuffle=True,num_workers=4)\n",
-    "valloader = torch.utils.data.DataLoader(valset,batch_size=BATCH_SIZE,shuffle=True,num_workers=4)\n",
+    "trainloader = torch.utils.data.DataLoader(trainset,batch_size=BATCH_SIZE,num_workers=2, shuffle=True)\n",
+    "valloader = torch.utils.data.DataLoader(valset,batch_size=BATCH_SIZE,num_workers=2, shuffle=True)\n",
     "classes = ('epidural', 'intraparenchymal', 'intraventricular', 'subarachnoid', 'subdural','none')\n",
     "model = torch.hub.load('pytorch/vision:v0.10.0', model, pretrained=False, num_classes=len(classes))\n",
     "if torch.cuda.is_available():\n",
     "    print(\"CUDA is available - using CUDA!\")\n",
     "    model = model.cuda()\n",
+    "    counts = counts.cuda()\n",
+    "resume = True\n",
+    "old_epoch = 0\n",
+    "if resume:\n",
+    "    print(\"Resuming training!\")\n",
+    "    old_epoch = 25\n",
+    "    model_load = 'weights/split_resnet18/epoch25.pth'\n",
+    "    if not torch.cuda.is_available():\n",
+    "        model.load_state_dict(torch.load(model_load, map_location=torch.device('cpu')))\n",
+    "    else:\n",
+    "        model.load_state_dict(torch.load(model_load))\n",
     "import torch.optim as optim\n",
     "import torch.nn as nn\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.005)"
+    "criterion = nn.CrossEntropyLoss(weight=counts)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Validating: Epoch 1:   1%|          | 47/4706 [00:37<1:01:40,  1.26batch/s, accuracy=85, loss=0.64]   \n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_18412/789706014.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0mcorrect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m             \u001b[0mtotal_correct\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mcorrect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[0mtotal\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "from tqdm import tqdm\n",
-    "for epoch in range(5):  # loop over the dataset multiple times\n",
+    "for epoch in range(15):  # loop over the dataset multiple times\n",
+    "    epoch += old_epoch\n",
     "    with tqdm(trainloader, unit=\"batch\") as tepoch:\n",
     "        model.train()\n",
     "        running_loss = 0.0\n",
@@ -197,9 +209,9 @@
     "                tepoch.set_postfix(loss=running_loss/batch, accuracy=100. * accuracy)\n",
     "            batch += 1\n",
     "\n",
-    "    print('Saving model at epoch {}'.format(epoch))\n",
-    "    torch.save(model.state_dict(), \"weights/split_resnet18/epoch{}.pth\".format(epoch))\n",
-    "    print('Saved model at epoch {}!'.format(epoch))\n",
+    "    print('Saving model at epoch {}'.format(epoch + 1))\n",
+    "    torch.save(model.state_dict(), \"weights/split_resnet18/epoch{}.pth\".format(epoch + 1))\n",
+    "    print('Saved model at epoch {}!'.format(epoch + 1))\n",
     "print('Finished training!')"
    ]
   }
